--- a/Docker.wiki
+++ b/Docker.wiki
@@ -28,6 +28,8 @@ CMD service nginx start
     - `sudo docker build --no-cache .`
     - `sudo docker images` list images
     - `sudo docker rmi {ID IMAGE}`
+* TO TEST : https://lebkowski.name/docker-volumes/ (clean up docker to reclaim disk space)
+* `docker volume ls -qf dangling=true | xargs -r docker volume rm` pour effacer tout
 
 == Example ==
 
