--- a/TO test.wiki
+++ b/TO test.wiki
@@ -13,8 +13,9 @@
  * [ ] vim plugins : https://github.com/tpope/vim-abolish avec https://github.com/tpope/vim-repeat tester la fonctionalité qui permet de passer en caméliser et inversement
  * [ ] GTD Taskwrrior http://taskwarrior.org/docs/start.html -> possibilité de le configurer avec mutt http://www.titus-stahl.de/blog/2015/08/13/a-better-taskwarrior-integration-for-mutt/
  * [ ] Acheter des noms de domaine avec des bitcoin : www.namecheap.com
- * [ ] Tester la technique pomodoro
- * [ ] Trouver le moyen d'avoir l'icone syncthong affichée dasn la barre de menu
+ * [X] Tester la technique pomodoro
+ * [ ] Trouver le moyen d'avoir l'icone syncthing affichée dasn la barre de menu
+ * [ ] Mettre de la couleur dans le terminal : https://unix.stackexchange.com/questions/148/colorizing-your-terminal-and-shell-environment
 
 = TO DO =
  * [ ] vimperator pour firefox, module pour gérer les passwords comme vimb
@@ -40,10 +41,12 @@
  * [X] i3 et dmenu : pourvoir lancer une application personnelle et faire que le nom s'affiche comme ceux prédéfinies (console-web-etc...)
  * [ ] i3 : faire que les layouts restent persistant entre chaque changement d'écran (peut-être via un backup auto du layouts rattachés à la fenêtre au moment de son changement
  * [ ] i3 : dernier écran -> aller à l'écran précédant
- * [ ] mutt confugurer le gpg
+ * [X] mutt configurer le gpg
  * [ ] utiliser lr gpg comme agent
  * [ ] https://pwmt.org/ à tester : document viewer
  * [ ] Un plugin pour pour i3pystatus pour voir le nombre de mise à jours -> voir https://github.com/ultrabug/py3status/blob/master/py3status/modules/arch_updates.py
- * [ ] mettre des icones sur les menus courants 
+ * [X] mettre des icones sur les menus courants 
  * [ ] i3 -> dossier share/bin -> lance autmotiquement dans une fentre nommée du nom de l'appli (suppression à terme du dosser i3 dans share/bin/i3)
  * [ ] Un système de backup (voir https://www.sysnove.fr/blog/2016/06/backupninja-borg.html)
+ * [ ] Re-synchroniser ansible-archlinux pour être à jour de la conf actuel, faire des tests de déploiment
+ * [ ] Voir les dépendances du dossier partagé share pour faire un bootstrap de gnugpg et pass
