--- a/git && github.wiki
+++ b/git && github.wiki
@@ -37,6 +37,13 @@ Créer un projet sur github et le tracker en local
     * `git push -u origin <branch>` pour pousser la branche local sur le repo d'origin et la suivre
     * `git update-index --assume-unchanged config/config.php` pour ne prendre en compte les modifs de config
 
+=== Revert les modifications de droits sur les fichiers ===
+
+{{{
+    git diff --summary | grep --color 'mode change 100755 => 100644' | cut -d' ' -f7- | xargs -d'\n' chmod +x
+    git diff --summary | grep --color 'mode change 100644 => 100755' | cut -d' ' -f7- | xargs -d'\n' chmod -x
+}}}
+
 === création d'un bare repo ===
 
     * `git clone --bare {URL/PATH} myrepo.git` 
