--- a/git && github.wiki
+++ b/git && github.wiki
@@ -25,11 +25,13 @@ Créer un projet sur github et le tracker en local
 
     * `git branch` pour lister les branches
     * `git branch -r` pour lister les branches trackées du remote
+    * `git checkout -b {nom de la branche}` pour créer une nouvelle branche
     * `git commit --amend` pour modifier le dernier commit
     * `git commit --amend --no-edit` pour ajouter un/des fichiers oubliés au dernier commit
     * `git reset <file>` pour annuler l'ajout d'un fichier (seulement en local)
     * `git reset --hard <file>` pour annuler l'ajout d'un fichier et revenir au dernier état (HEAD)
     * `git reset HEAD~` annule un commit sans modification des fichiers
+    * `git reset --merge ORIG_HEAD` annule le dernier merge dans modifier les fichiers locaux modifés (dans le cas d'un merge non pushé)
     * `git checkout -- filename` annule les modifications d'un fichier local
     * `git log --graph --oneline --all` graph des commit
     * `git branch master -u {repo_distant}/master` pour indiquer le repo distant de la branche
@@ -58,6 +60,12 @@ Créer un projet sur github et le tracker en local
     * `git remote add origin bitbucket.org:myrepo/myrepo.git`
     * `git checkout -b release --track origin/release`
 
+=== Ne prendre que certain fichier/dossier lors du checkout ===
+    * `git init && git remote add -f origin <url>`
+    * `git config core.sparseCheckout true`
+    * `echo "sys" > .git/info/sparse-chekcout`
+    * `git pull origin master`
+
 == Git pour le déploiement ==
 	https://www.digitalocean.com/community/tutorials/how-to-set-up-automatic-deployment-with-git-with-a-vps
 	
@@ -72,6 +80,13 @@ Créer un projet sur github et le tracker en local
     
     * `git clean -f -n` pour voir les fichiers qui vont être supprimés
     * `git clean -f` pout supprimer les fichiers non suivis
+
+== Tig et cherry pick ==
+
+    * touche `b` pour voir toute les branches
+    * sélectionner la branche depuis laquelle prendre le commit souhaité
+    * selectioner le commit désiré puis appuyer sur `P`
+    * le commit sera mis sur la branche
 
 == Workflow avec git ==
     http://nvie.com/posts/a-successful-git-branching-model/
