--- a/TO test.wiki
+++ b/TO test.wiki
@@ -1,52 +1,53 @@
 = TO test =
 
- * [ ] Offline imap mail see http://blog.tshirtman.fr/2013/3/17/mutt-offlineimap-notmuch-nottoomuch
- * [X] http://ohmyz.sh
- * [ ] http://www.drumminhands.com/2014/06/15/raspberry-pi-photo-booth/
- * [ ] pandoc pour faire les conversions de différents markup
- * [ ] vim dans tmux http://rhnh.net/2011/08/20/vim-and-tmux-on-osx
- * [ ] voir quelques plugin de https://github.com/connermcd/dotfiles/blob/master/.vimrc
- * [X] navigation vim dasn urxvt https://github.com/ervandew/urxvt-vim-scrollback
- * [ ] Organiser sa [[http://beets.radbox.org/|musique en ligne de commande]]
- * [ ] Des dessins sous vim http://www.thegeekstuff.com/2009/12/how-to-create-ascii-drawings-in-vim-editor-draw-boxes-lines-ellipses-arrows-inside-text-file/
- * [X] [[http://crypto.stanford.edu/PwdHash/|Web Password Hashing]]
- * [ ] vim plugins : https://github.com/tpope/vim-abolish avec https://github.com/tpope/vim-repeat tester la fonctionalité qui permet de passer en caméliser et inversement
- * [ ] GTD Taskwrrior http://taskwarrior.org/docs/start.html -> possibilité de le configurer avec mutt http://www.titus-stahl.de/blog/2015/08/13/a-better-taskwarrior-integration-for-mutt/
- * [ ] Acheter des noms de domaine avec des bitcoin : www.namecheap.com
- * [X] Tester la technique pomodoro
- * [ ] Trouver le moyen d'avoir l'icone syncthing affichée dasn la barre de menu
- * [ ] Mettre de la couleur dans le terminal : https://unix.stackexchange.com/questions/148/colorizing-your-terminal-and-shell-environment
+ * [ ] Offline imap mail see http://blog.tshirtman.fr/2013/3/17/mutt-offlineimap-notmuch-nottoomuch  #6ccf67e0
+ * [X] http://ohmyz.sh  #3aa40fbc
+ * [ ] http://www.drumminhands.com/2014/06/15/raspberry-pi-photo-booth/  #9ba2ec45
+ * [ ] pandoc pour faire les conversions de différents markup  #7104d878
+ * [ ] vim dans tmux http://rhnh.net/2011/08/20/vim-and-tmux-on-osx  #361a8774
+ * [ ] voir quelques plugin de https://github.com/connermcd/dotfiles/blob/master/.vimrc  #0443c75d
+ * [X] navigation vim dasn urxvt https://github.com/ervandew/urxvt-vim-scrollback  #2ab8511b
+ * [ ] Organiser sa [[http://beets.radbox.org/|musique en ligne de commande]]  #56aad41d
+ * [ ] Des dessins sous vim http://www.thegeekstuff.com/2009/12/how-to-create-ascii-drawings-in-vim-editor-draw-boxes-lines-ellipses-arrows-inside-text-file/  #e99264b2
+ * [X] [[http://crypto.stanford.edu/PwdHash/|Web Password Hashing]]  #e1215dc5
+ * [ ] vim plugins : https://github.com/tpope/vim-abolish avec https://github.com/tpope/vim-repeat tester la fonctionalité qui permet de passer en caméliser et inversement  #b07ccb19
+ * [ ] GTD Taskwrrior http://taskwarrior.org/docs/start.html -> possibilité de le configurer avec mutt http://www.titus-stahl.de/blog/2015/08/13/a-better-taskwarrior-integration-for-mutt/  #6878367f
+ * [ ] Acheter des noms de domaine avec des bitcoin : www.namecheap.com  #82b5dd28
+ * [X] Tester la technique pomodoro  #db14b82a
+ * [ ] Trouver le moyen d'avoir l'icone syncthing affichée dasn la barre de menu  #e5ca9276
+ * [ ] Mettre de la couleur dans le terminal : https://unix.stackexchange.com/questions/148/colorizing-your-terminal-and-shell-environment  #40962580
 
 = TO DO =
- * [ ] vimperator pour firefox, module pour gérer les passwords comme vimb
- * [ ] thunderbolt en connexion a chaud (udevadm monitor) https://bbs.archlinux.org/viewtopic.php?id=170294
- * [ ] ameliorer la detection des ecrans http://superuser.com/questions/970024/system-doesnt-detect-hot-plugged-display-portthrough-thunderbolt-connector
- * [ ] improve vimrc see https://github.com/pixelastic/oroshi/blob/master/config/vim/vimrc
- * [ ] improve delete on gmail account (TODO : mark message as d and $ to really delete -> mv to trash box)
- * [ ] faire un raccourci dans mutt pour avoir accès directemnt au mail envoyé
- * [X] fait que lorsque le scratchpad s'affiche le cursor de la souris soit au centre -> ajout d'une option dans i3 pour que le focus ne suive pas la souris
- * [ ] Vimb launch a pdf viewer instead of always download the file
- * [X] Corriger la date des mails dans mutt
- * [ ] vimwiki : lors de l'ajout d'une entrée dans le journal, faire que l'enregistrement de l'entrée mette à jour l'index du journal
- * [ ] vimwiki : faire que le colonne des nombres affiche autremnent et autre chose que les numéros de ligne (par exemple les niveaux de replis)
- * [ ] vimwiki : faire que la touche tab propose l'auto-complétion des mots, les flèches droite-gauche permenettent de naviguer entre les fautes et qu'on soit automatiquement en mode correction
- * [ ] vim : trouver une solution pour désactiver le XON/XOFF (ctl-q/ctl-s)
- * [ ] Imaginer un raccourci qui permetterai d'ouvrir une fenetre mail supplémentaire pour par exemple pouvoir écrire un mail en même temps que pouvoir aller sur la liste des mails
- * [ ] mutt : améliorer la configuration voir http://www.titus-stahl.de/blog/2015/08/26/my-mutt-configuration/ et http://stevelosh.com/blog/2012/10/the-homely-mutt/#searching-email
- * [ ] vimb : ouvrir les pdf (ne plus les télécharger) -> tentavie avec `/usr/bin/inotifywait -m -q -e create --format %f . | xargs llpp` mais marche pas !!!
- * [ ] mutt : voir http://wcm1.web.rice.edu/mutt-tips.html pour le Format-flower
- * [ ] vifm : fair un plugin pour gérer git
- * [ ] vifm : faire un mode preview pour que les fichiers s'ouvrent dans un scratchpad
- * [X] Faire le montage du dossier de musique sur creamy (fait avec syncthing)
- * [X] i3 et dmenu : pourvoir lancer une application personnelle et faire que le nom s'affiche comme ceux prédéfinies (console-web-etc...)
- * [ ] i3 : faire que les layouts restent persistant entre chaque changement d'écran (peut-être via un backup auto du layouts rattachés à la fenêtre au moment de son changement
- * [ ] i3 : dernier écran -> aller à l'écran précédant
- * [X] mutt configurer le gpg
- * [ ] utiliser lr gpg comme agent
- * [ ] https://pwmt.org/ à tester : document viewer
- * [ ] Un plugin pour pour i3pystatus pour voir le nombre de mise à jours -> voir https://github.com/ultrabug/py3status/blob/master/py3status/modules/arch_updates.py
- * [X] mettre des icones sur les menus courants 
- * [ ] i3 -> dossier share/bin -> lance autmotiquement dans une fentre nommée du nom de l'appli (suppression à terme du dosser i3 dans share/bin/i3)
- * [ ] Un système de backup (voir https://www.sysnove.fr/blog/2016/06/backupninja-borg.html)
- * [ ] Re-synchroniser ansible-archlinux pour être à jour de la conf actuel, faire des tests de déploiment
- * [ ] Voir les dépendances du dossier partagé share pour faire un bootstrap de gnugpg et pass
+ * [ ] vimperator pour firefox, module pour gérer les passwords comme vimb  #e09b3455
+ * [ ] thunderbolt en connexion a chaud (udevadm monitor) https://bbs.archlinux.org/viewtopic.php?id=170294  #4ee8c72a
+ * [ ] ameliorer la detection des ecrans http://superuser.com/questions/970024/system-doesnt-detect-hot-plugged-display-portthrough-thunderbolt-connector  #53035b75
+ * [ ] improve vimrc see https://github.com/pixelastic/oroshi/blob/master/config/vim/vimrc  #f8ad8a6c
+ * [ ] improve delete on gmail account (TODO : mark message as d and $ to really delete -> mv to trash box)  #31500431
+ * [ ] faire un raccourci dans mutt pour avoir accès directemnt au mail envoyé  #37e41a2e
+ * [X] fait que lorsque le scratchpad s'affiche le cursor de la souris soit au centre -> ajout d'une option dans i3 pour que le focus ne suive pas la souris  #2a73642c
+ * [ ] Vimb launch a pdf viewer instead of always download the file  #2b71946b
+ * [X] Corriger la date des mails dans mutt  #210bfa3c
+ * [ ] vimwiki : lors de l'ajout d'une entrée dans le journal, faire que l'enregistrement de l'entrée mette à jour l'index du journal  #973e2996
+ * [ ] vimwiki : faire que le colonne des nombres affiche autremnent et autre chose que les numéros de ligne (par exemple les niveaux de replis)  #ac593720
+ * [ ] vimwiki : faire que la touche tab propose l'auto-complétion des mots, les flèches droite-gauche permenettent de naviguer entre les fautes et qu'on soit automatiquement en mode correction  #fca50eb6
+ * [ ] vim : trouver une solution pour désactiver le XON/XOFF (ctl-q/ctl-s)  #8f06c95c
+ * [ ] Imaginer un raccourci qui permetterai d'ouvrir une fenetre mail supplémentaire pour par exemple pouvoir écrire un mail en même temps que pouvoir aller sur la liste des mails  #e111a671
+ * [ ] mutt : améliorer la configuration voir http://www.titus-stahl.de/blog/2015/08/26/my-mutt-configuration/ et http://stevelosh.com/blog/2012/10/the-homely-mutt/#searching-email  #a046cca7
+ * [ ] vimb : ouvrir les pdf (ne plus les télécharger) -> tentavie avec `/usr/bin/inotifywait -m -q -e create !!!  #56be3c5b
+ * [ ] mutt : voir http://wcm1.web.rice.edu/mutt-tips.html pour le Format-flower  #dcc5a63f
+ * [ ] vifm : fair un plugin pour gérer git  #b0b0a863
+ * [ ] vifm : faire un mode preview pour que les fichiers s'ouvrent dans un scratchpad  #9f9952c5
+ * [X] Faire le montage du dossier de musique sur creamy (fait avec syncthing)  #a5904463
+ * [X] i3 et dmenu : pourvoir lancer une application personnelle et faire que le nom s'affiche comme ceux prédéfinies (console-web-etc...)  #e8938dcf
+ * [ ] i3 : faire que les layouts restent persistant entre chaque changement d'écran (peut-être via un backup auto du layouts rattachés à la fenêtre au moment de son changement  #451112bd
+ * [ ] i3 : dernier écran -> aller à l'écran précédant  #c656df9c
+ * [X] mutt configurer le gpg  #659e3742
+ * [ ] utiliser lr gpg comme agent  #4c1c0240
+ * [ ] https://pwmt.org/ à tester : document viewer  #970d218d
+ * [ ] Un plugin pour pour i3pystatus pour voir le nombre de mise à jours -> voir https://github.com/ultrabug/py3status/blob/master/py3status/modules/arch_updates.py  #af5719ef
+ * [X] mettre des icones sur les menus courants  #d64d6522
+ * [ ] i3 -> dossier share/bin -> lance autmotiquement dans une fentre nommée du nom de l'appli (suppression à terme du dosser i3 dans share/bin/i3)  #8d19843d
+ * [ ] Un système de backup (voir https://www.sysnove.fr/blog/2016/06/backupninja-borg.html)  #df639c5a
+ * [ ] Re-synchroniser ansible-archlinux pour être à jour de la conf actuel, faire des tests de déploiment  #7183e0c8
+ * [ ] Voir les dépendances du dossier partagé share pour faire un bootstrap de gnugpg et pass  #f85f8387
+ * [ ] Faire un logger d'activiter avec dmenu => raccourci pour saisir du texte qui aura se mettre dans un fichier calendrier wiki avec un horodatage  #67e81bbd
