--- a/git && github.wiki
+++ b/git && github.wiki
@@ -38,6 +38,7 @@ Créer un projet sur github et le tracker en local
     * `git fetch upstream && git checkout master && git merge upstream/master` pour [[https://www.sumonselim.com/sync-forked-github-repository-master/|synchroniser un fork]] avec le projet d'origine 
     * `git push -u origin <branch>` pour pousser la branche local sur le repo d'origin et la suivre
     * `git update-index --assume-unchanged config/config.php` pour ne prendre en compte les modifs de config
+    * `git stash apply` pour appliquer le dernier stash
 
 === Revert les modifications de droits sur les fichiers ===
 
