--- a/Command line collection.wiki
+++ b/Command line collection.wiki
@@ -54,4 +54,26 @@ bc << .
 * joindre des lignes d'une sortie de commande comme 'grep' par exemple
 `paste -s -d","` #séparer par des virgules
 
+== xterm-termite ==
+
+manual : https://github.com/thestinger/termite
+
+* Insert mode
+`ctrl-shift-x` activate url hints mode
+`ctrl-shift-r` reload configuration file
+`ctrl-shift-c` copy to CLIPBOARD
+`ctrl-shift-v` paste from CLIPBOARD
+`ctrl-shift-u` unicode input (standard GTK binding)
+`ctrl-shift-e` emoji (standard GTK binding)
+`ctrl-tab` start scrollback completion
+`ctrl-shift-space` start selection mode
+`ctrl-shift-t` open terminal in the current directory [1]
+`ctrl-shift-up` scroll up a line
+`ctrl-shift-down` scroll down a line
+`shift-pageup` scroll up a page
+`shift-pagedown` scroll down a page
+`ctrl-shift-l` reset and clear
+`ctrl-+` increase font size
+`ctrl--` decrease font size
+`ctrl-=` reset font size to default
 
