--- a/git && github.wiki
+++ b/git && github.wiki
@@ -2,19 +2,18 @@
 
 == Authentification ==
 
-	* fichier ~/.git-credentials TODO:command pour générer ce ficher
-	* command `git config credential.helper 'store'` pour utiliser l'authentification permanente
-	* préférer l'authentification par clefs ssh (git@github.com)
+    * fichier ~/.git-credentials TODO:command pour générer ce ficher
+    * command `git config credential.helper 'store'` pour utiliser l'authentification permanente
+    * préférer l'authentification par clefs ssh (git@github.com)
 
 == Tutorial ==
 
  Excellent [[http://blog.octo.com/git-dans-la-pratique-12/|tuto]] Git 
  Plein de [[https://orga.cat/posts/most-useful-git-commands|commandes utiles]]
- 
+
 == Github ==
 
 Créer un projet sur github et le tracker en local
-
 {{{
     $ git init
     $ git remote add origin git@github.com:username/new_repo
@@ -51,9 +50,9 @@ Créer un projet sur github et le tracker en local
 
 === création d'un bare repo ===
 
-    * `git clone --bare {URL/PATH} myrepo.git` 
+    * `git clone --bare {URL/PATH} myrepo.git`
     * `git fetch {URL/PATH} branch_local:branch_distante`
-    
+
     Voir ce pastebin pour plus de détail sur le wrklow avec un bare git :
     https://pastebin.com/dSbpedLV
 
@@ -70,8 +69,8 @@ Créer un projet sur github et le tracker en local
     * `git pull origin master`
 
 == Git pour le déploiement ==
-	https://www.digitalocean.com/community/tutorials/how-to-set-up-automatic-deployment-with-git-with-a-vps
-	
+    https://www.digitalocean.com/community/tutorials/how-to-set-up-automatic-deployment-with-git-with-a-vps
+
 == Faire un merge ==
 
     * `:diffget 1` pour avoir la version de son local
@@ -101,26 +100,26 @@ Créer un projet sur github et le tracker en local
     * créer un dossier `/var/opt/gitlab/git-data/repositories/labonneformation/labonneformation.git/custom_hooks/post-receive`
     * dans le fichier :
     {{{
-		#!/bin/bash
-		while read oldrev newrev refname
-		do
-			branch=$(git rev-parse --symbolic --abbrev-ref $refname)
-			if [ "develop" == "$branch" ]; then
-				ssh -Ct livraison@192.168.4.100 "cd /home/www/labonneformation &&  git pull origin develop"
-			fi
-		done
+        #!/bin/bash
+        while read oldrev newrev refname
+        do
+            branch=$(git rev-parse --symbolic --abbrev-ref $refname)
+            if [ "develop" == "$branch" ]; then
+                ssh -Ct livraison@192.168.4.100 "cd /home/www/labonneformation &&  git pull origin develop"
+            fi
+        done
     }}}
-	* faire un `su gitlab-runner`
-	* créer une clé passwordless `ssh-keygen -t rsa`
-	* copier la clé sur le serveur sur lequel faire le pull `ssh-copy -i .ssh/id_rsa dest@serveur`
+    * faire un `su gitlab-runner`
+    * créer une clé passwordless `ssh-keygen -t rsa`
+    * copier la clé sur le serveur sur lequel faire le pull `ssh-copy -i .ssh/id_rsa dest@serveur`
 
 == Workflow avec git ==
     http://nvie.com/posts/a-successful-git-branching-model/
     https://jayenashar.wordpress.com/2012/11/18/yagbm-yet-another-git-branching-model/
     Outil indispensable : [[http://jonas.nitro.dk/tig/|tig]]
-    
+
 === Workflow étape par étape ===
-    
+
 ===== une feature =====
 
     `git checkout -b {feature} origin/master` => on crée la branche
@@ -157,7 +156,7 @@ Créer un projet sur github et le tracker en local
 
 
 == Déploiement ==
-    
+
     Voir : https://grimoire.ca/git/stop-using-git-pull-to-deploy 
     My deployment process, given a dedicated clone at $DEPLOY_TREE, is as follows:
 
@@ -168,6 +167,75 @@ Créer un projet sur github et le tracker en local
     # git submodule sync
     # git submodule update --init --recursive
     # # Follow with actual deployment steps (run fabric/capistrano/make/etc)
+
+== Résoudre un conflit d'une branche ==
+
+    On récupère les branches distantes (sans chercher à merger)
+    git fetch origin
+
+    # On met le diff entre notre version et la version distante en conflit
+    dans un fichier temporaire
+    `git diff origin/hauts-de-france > /tmp/hautsdefrance.diff`
+
+    # On se réaligne sur la branche distante
+    `git reset --hard origin/hauts-de-france `
+
+    # On applique le diff
+    `git apply /tmp/hautsdefrance.diff`
+
+    # Bonus, voir les changements mots à mots au lieu de ligne à ligne (très
+      utile pour les diffs dans du texte (vs du code), par exemple les fichier
+      de règles)
+    `git diff --word-diff`
+
+    # Ça marche dans n'importe quel situation où on consulte un diff, par
+      exemple
+    `git show HEAD --word-diff`
+
+== Réécrire l'historique ==
+
+    Ne doit être fait que sur une branche en local ou sur une branche privée si
+    elle est distante.
+
+    Réécrire les 3 derniers comit
+    `git rebase -i HEAD~3`
+
+
+== Manipuler les commit ==
+
+    Lorsqu'on travaille sur une branche, on peut avoir besoin de réorganiser les commit
+    
+    # Trouver le point à partir duquel on va rebaser
+    `git log --graph --oneline --all`
+
+    # Commencer le rebase
+    `git rebase -i {hash du commit}`
+
+    # Editer un commit pour le spliter : remplacer 'pick' par 'edit'
+    
+    # Faire un reset pour choisir ce qu'on va commiter
+    `git reset HEAD~`
+    
+    # Si besoin de faire ligne à ligne sur un fichier
+    `git add -p {chemin/du/fichier}`
+    
+    # Faire autant de commit que nécessaire et vérifier que tout est bien commité
+
+    # continuer le rebase jusqu'à la fin
+    `git rebase --continue`
+
+    # si trop de conflit alors annuler le rebase
+    `git rebase --abort`
+
+== Faire un patch et l'appliquer ==
+
+    # Faire le diff et le mettre dans un fichier
+    `git diff origin/{branch} > patch.diff`
+    
+    # Editer au besoin le fichier de diff pour suppimer des lignes à ne pas patcher
+    
+    # Appliquer le patch
+    `git apply patch.diff`
 
 == Git svn ==
 
@@ -198,13 +266,13 @@ Créer un projet sur github et le tracker en local
         remote = origin
         merge = refs/heads/master
    }}}
-   
+
    Si oublie d'un dossier dans le ignore-paths, alors obligé de faire un reset
    à la révision pour laquelle le dossier a été ajouté puis faire fetch.
    `git svn reset -r {REVISION}`
    `git svn fetch`
    `git rebase onto origin/master` # si sur git branch master existe
-   
+
    Pour trouver le numéro de révision du premier commit d'un fichier :
    `svn log -r 1:HEAD --limit 1 <REPO_URL>` 
 
