--- a/Vim.wiki
+++ b/Vim.wiki
@@ -25,6 +25,15 @@ Visual seletion on the operation todo and :
 * plugin [[https://github.com/osyo-manga/vim-over|vim-over]] `:OverCommandLine`
 * plugin [[https://github.com/vim-scripts/DrawIt|DrawIt]] pour faire des diagrammes ascii
 
+=== Vars ===
+`:set            - shows vars different from defaults`
+`:set all        - shows all values`
+`:set foo?       - shows the value of foo`
+`:set foo+=opt   - add opt to the value w/o changing others`
+`:set foo-=opt   - remove opt from value`
+`:set foo&       - reset foo to default value`
+`:setlocal foo   - only the current buffer`
+
 ==== Mode vim pour écrire et prendre de note ====
 * vim pour écrire : http://naperwrimo.org/wiki/index.php?title=Vim_for_Writers et aussi https://afterdraft.co/~aardvark/writing-with-vim
 * installation du plugin Goyo avec function + mapping
